# rpi_pico_avr_isp

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  README.md
.github/workflows/: test.yml
docs/: README.md
docs/isp/: README.md
docs/stk500v1/: README.md  parameters.md
include/: avr_isp.h  commands.h  stk500.h
include/core/: calc.h  handler.h  logger.h  parser.h  stk500.h  stk500_parameters.h
pcb/: README.md  stk500rp.kicad_sch
src/: CMakeLists.txt  avr_isp.c  main.c  stk500.c
src/app/: CMakeLists.txt  main.c
src/app/avr/: CMakeLists.txt  main.c
src/app/rp2040/: CMakeLists.txt
src/core/: CMakeLists.txt  calc.c  handler.c  logger.c  parser.c
src/core/handler/: device.c  eeprom.c  flash.c  fuse.c  handler.c  handler_private.h  page_access.c  program.c  sync.c  universal.c
tests/: CMakeLists.txt  test_calc.cpp  test_handler.cpp  test_main.cpp  test_parser.cpp
tests/handler/: common.cpp  common.h  handler_test_common.cpp  handler_test_common.h  test_device.cpp  test_eeprom.cpp  test_flash.cpp  test_fuse.cpp  test_handler.cpp  test_program.cpp  test_sync.cpp  test_universal.cpp
